--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   spreadsheet_decoder: ^1.1.0
   path_provider: ^1.6.5
   flutter_form_builder: ^3.8.3
+  provider: ^4.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
