--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path_provider: ^1.6.5
   flutter_form_builder: ^3.8.3
   provider: ^4.0.5
+  sqflite: ^1.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
