--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_form_builder: ^3.8.3
   provider: ^4.0.5
   sqflite: ^1.3.0
+  image_picker: ^0.6.5+2
 
 
   # The following adds the Cupertino Icons font to your application.
