--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^4.0.5
   sqflite: ^1.3.0
   image_picker: ^0.6.5+2
+  open_file: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
