--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   sqflite: ^1.3.0
   image_picker: ^0.6.5+2
   open_file: ^3.0.1
+  dio: ^3.0.9
+
 
 
   # The following adds the Cupertino Icons font to your application.
